# morte

./: COPYRIGHT  README.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: tests.yml
ci/: environment-3.10.yml  environment-3.8.yml  environment-3.9.yml
morte/: __init__.py  parse.py  utilities.py
morte/models/: __init__.py  accessesm.py  base.py  model.py  test.py
morte/test/: conftest.py  test_performance.py  test_reproducibility.py
test/: test.py
