[metadata]
name = morte
author = Dougie Squire
author-email = dougal.squire@anu.edu.au
summary = Model Output Regression Testing
description-file = README.md
licence = Apache 2.0
classifier =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3

[files]
packages = 
    morte

[extras]
dev =
    pre-commit

[flake8]
exclude = __init__.py
max-line-length = 120
max-complexity = 18
select = B,C,E,F,W,T4,B9
ignore = E203,W503
